--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,5 +4,6 @@
 // Custom SCSS
 @import "components/buttons";
 @import "components/forms";
+@import "components/typography";
 
 @tailwind utilities;
