--- a/app/javascript/stylesheets/components/_buttons.scss
+++ b/app/javascript/stylesheets/components/_buttons.scss
@@ -5,17 +5,19 @@
 }
 
 .btn-default {
-  @apply bg-white border border-gray-400 text-gray-700;
+  @apply bg-blue-600 text-white;
 
-  &:hover, &:focus {
-    @apply border-gray-500;
+  &:hover,
+  &:focus {
+    @apply bg-blue-500;
   }
 }
 
 .link {
-  @apply no-underline text-gray-700;
+  @apply no-underline text-white;
 
-  &:hover, &:focus {
-    @apply text-gray-700;
+  &:hover,
+  &:focus {
+    @apply text-gray-100;
   }
 }
