--- a/app/javascript/stylesheets/components/_forms.scss
+++ b/app/javascript/stylesheets/components/_forms.scss
@@ -1,22 +1,22 @@
 /* Forms */
 .input {
-  @apply appearance-none block w-full bg-gray-100 text-gray-700 border border-gray-300 rounded py-3 px-4 leading-tight;
+  @apply appearance-none block w-full bg-blue-100 text-gray-800 rounded py-3 px-4 leading-tight;
 }
 
 .input:focus {
-  @apply outline-none bg-white border-gray-400;
+  @apply outline-none bg-white;
 }
 
 .label {
-  @apply block text-gray-700 text-sm font-bold mb-2;
+  @apply block text-blue-100 text-sm font-bold mb-2;
 }
 
 .select {
-  @apply appearance-none py-3 px-4 pr-8 block w-full bg-gray-100 border border-gray-300 text-gray-700
+  @apply appearance-none py-3 px-4 pr-8 block w-full bg-blue-100 text-gray-800
    rounded leading-tight;
-   -webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 .select:focus {
-  @apply outline-none bg-white border-gray-400;
+  @apply outline-none bg-white;
 }
