--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kickoff</title>
+    <title>Back My Idea</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -13,7 +13,7 @@
 
   </head>
 
- <body class="bg-white">
+ <body class="bg-blue-800 text-blue-100">
 
   <% flash.each do |type, message| %>
     <% if type == "alert" %>
@@ -29,25 +29,24 @@
   <% end %>
 
     <header class="mb-4">
-      <nav class="flex items-center justify-between flex-wrap bg-gray-100 py-3 lg:px-10 px-3 text-gray-700 border-b border-gray-400">
+      <nav class="flex items-center justify-between flex-wrap py-3 lg:px-10 px-3 text-gray-700">
         <div class="flex items-center flex-no-shrink mr-6">
-          <%= link_to "Kickoff", root_path, class:"link text-xl tracking-tight font-semibold" %>
+          <%= link_to "Back My Idea", root_path, class:"link text-lg tracking-wider font-semibold uppercase" %>
         </div>
         <div class="block lg:hidden">
-          <button class="flex items-center px-3 py-2 border rounded text-grey border-gray-500 hover:text-gray-600 hover:border-gray-600">
+          <button class="flex items-center px-3 py-2 border rounded text-white border-gray-500 hover:text-gray-200 hover:border-gray-200">
             <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
           </button>
         </div>
         <div class="w-full block lg:flex-1 lg:flex items-center text-center lg:text-left">
-          <div class="lg:flex-grow">
-            <%= link_to "Basic Link", "#", class: "block mt-4 lg:inline-block lg:mt-0 lg:mr-4 mb-2 lg:mb-0 link" %>
-          </div>
+          <div class="lg:flex-grow"></div>
           <div class="w-full block lg:flex lg:flex-row lg:flex-1 mt-2 lg:mt-0 text-center lg:text-left lg:justify-end items-center">
             <% if user_signed_in? %>
-            <%= link_to "Login", new_user_session_path, class:"btn btn-default mb-2 lg:mr-2 lg:mb-0 block" %>
-            <%= link_to "Sign Up", new_user_registration_path, class:"btn btn-default block" %>
-            <% else %>
               <%= link_to "Log out", destroy_user_session_path, method: :delete, class:"btn btn-default mb-2 lg:mr-2 lg:mb-0 block" %>
+            <% else %>
+
+              <%= link_to "Login", new_user_session_path, class:"btn btn-default mb-2 lg:mr-2 lg:mb-0 block" %>
+              <%= link_to "Sign Up", new_user_registration_path, class:"btn btn-default block" %>
             <% end %>
           </div>
         </div>
