Add styles, action text and active storage

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -4,6 +4,7 @@
 // Custom SCSS
 @import "components/buttons";
 @import "components/forms";
+@import "components/actiontext";
 @import "components/typography";
 
 @tailwind utilities;
