--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: project, local: true) do |form| %>
   <% if project.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
+    <div id="error_explanation" class="bg-white p-6 rounded text-red-500 mb-5">
+      <h2 class="text-red-500 font-bold"><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
 
       <ul>
         <% project.errors.full_messages.each do |message| %>
@@ -19,6 +19,11 @@
   <div class="mb-6">
     <%= form.label :donation_goal, class: "label" %>
     <%= form.text_field :donation_goal, class: "input" %>
+  </div>
+
+  <div class="mb-6">
+    <%= form.label :description, class: "label" %>
+    <%= form.rich_text_area :description, class: "input" %>
   </div>
 
   <div class="mb-6">
