--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: project, local: true) do |form| %>
+<%= form_with(model: project, local: true, multipart: true) do |form| %>
   <% if project.errors.any? %>
     <div id="error_explanation" class="bg-white p-6 rounded text-red-500 mb-5">
       <h2 class="text-red-500 font-bold"><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
@@ -10,6 +10,11 @@
       </ul>
     </div>
   <% end %>
+
+  <div class="mb-6">
+    <%= form.label :thumbnail, "Project thumbnail", class: "label" %>
+    <%= form.file_field :thumbnail %>
+  </div>
 
   <div class="mb-6">
     <%= form.label :title, class: "label" %>
