--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,8 +1,8 @@
 <div class="flex flex-wrap items-center justify-between">
   <% @projects.each do |project| %>
-    <div class="border-2 border-blue-700 rounded-lg p-6 lg:w-1/4 w-full relative">
-      <%= image_tag project.thumbnail.variant(resize_to_limit: [600, 400]) %>
-      <h3 class="font-bold text-2xl mb-2"><%= project.title %></h3>
+    <div class="relative w-full p-6 border-2 border-blue-700 rounded-lg lg:w-1/4">
+      <%= image_tag project.thumbnail.variant(resize_to_limit: [600, 400]), class: "rounded" %>
+      <h3 class="mb-2 text-2xl font-bold"><%= project.title %></h3>
       <div class="my-1"><%= truncate(strip_tags(project.description.to_s), length: 140) %></div>
       <p>Donation goal: <%= project.donation_goal %></p>
       <p class="text-sm italic opacity-75">Created by: <%= project.user.name %> </p>
@@ -10,11 +10,10 @@
       <% if author_of(project) %>
       <div class="absolute top-0 right-0 mt-2 mr-2">
         <%= link_to edit_project_path(project) do %>
-          <svg class="fill-current text-white opacity-75 w-6 h-6" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>edit</title><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"></path></svg>
+          <svg class="w-6 h-6 text-white opacity-75 fill-current" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><title>edit</title><path d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"></path></svg>
         <% end %>
       </div>
       <% end %>
     </div>
   <% end %>
 </div>
-
