--- a/app/javascript/stylesheets/components/_buttons.scss
+++ b/app/javascript/stylesheets/components/_buttons.scss
@@ -1,7 +1,19 @@
 /* Buttons */
 
 .btn {
-  @apply font-semibold text-sm py-2 px-4 rounded cursor-pointer no-underline;
+  @apply font-semibold text-sm py-2 px-4 rounded cursor-pointer no-underline inline-block;
+
+  &.btn-sm {
+    @apply text-xs py-1 px-3;
+  }
+
+  &.btn-lg {
+    @apply text-base py-3 px-4;
+  }
+
+  &.btn-expanded {
+    @apply block w-full text-center;
+  }
 }
 
 .btn-default {
@@ -10,6 +22,15 @@
   &:hover,
   &:focus {
     @apply bg-blue-500;
+  }
+
+  &.btn-outlined {
+    @apply border border-blue-600 bg-transparent text-blue-600;
+
+    &:hover,
+    &:focus {
+      @apply bg-blue-600 text-white;
+    }
   }
 }
 
