--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,4 +1,4 @@
 <div class="max-w-lg m-auto">
-  <h1 class="text-3xl font-bold mb-6">Create a Project</h1>
+  <h1 class="mb-6 text-3xl font-bold">Create a Project</h1>
   <%= render 'form', project: @project %>
 </div>
