--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for [commentable, Comment.new] do |f| %>
   <div class="mb-6">
-    <%= f.text_area :body, class: "input input-with-border", placeholder: "Add a comment" %>
+    <%= f.text_area :body, class: "input input-with-border", placeholder: "Add a comment", required: true %>
   </div>
   <%= f.submit class: "btn btn-default" %>
 <% end %>
