--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,37 +13,39 @@
 
   </head>
 
- <body class="bg-blue-800 text-blue-100">
+ <body class="text-blue-100 bg-blue-800">
 
   <% flash.each do |type, message| %>
     <% if type == "alert" %>
       <div class="bg-red-500">
-        <div class="container px-2 mx-auto py-4 text-white text-center font-medium font-sans"><%= message %></div>
+        <div class="container px-2 py-4 mx-auto font-sans font-medium text-center text-white"><%= message %></div>
       </div>
     <% end %>
     <% if type == "notice" %>
       <div class="bg-green-500">
-        <div class="container px-2 mx-auto py-4 text-white text-center font-medium font-sans"><%= message %></div>
+        <div class="container px-2 py-4 mx-auto font-sans font-medium text-center text-white"><%= message %></div>
       </div>
     <% end %>
   <% end %>
 
     <header class="mb-4">
-      <nav class="flex items-center justify-between flex-wrap py-3 lg:px-10 px-3 text-gray-700">
-        <div class="flex items-center flex-no-shrink mr-6">
+      <nav class="flex flex-wrap items-center justify-between px-3 py-3 text-gray-700 lg:px-10">
+        <div class="flex items-center mr-6 flex-no-shrink">
           <%= link_to "Back My Idea", root_path, class:"link text-lg tracking-wider font-semibold uppercase" %>
         </div>
         <div class="block lg:hidden">
-          <button class="flex items-center px-3 py-2 border rounded text-white border-gray-500 hover:text-gray-200 hover:border-gray-200">
-            <svg class="fill-current h-3 w-3" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
+          <button class="flex items-center px-3 py-2 text-white border border-gray-500 rounded hover:text-gray-200 hover:border-gray-200">
+            <svg class="w-3 h-3 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><title>Menu</title><path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"/></svg>
           </button>
         </div>
-        <div class="w-full block lg:flex-1 lg:flex items-center text-center lg:text-left">
-          <div class="lg:flex-grow"></div>
-          <div class="w-full block lg:flex lg:flex-row lg:flex-1 mt-2 lg:mt-0 text-center lg:text-left lg:justify-end items-center">
+        <div class="items-center block w-full text-center lg:flex-1 lg:flex lg:text-left">
+          <div class="lg:flex-grow">
+            <%= link_to "New Project", new_project_path, class: "btn btn-white mb-2 lg:mb-0" %>
+          </div>
+          <div class="items-center block w-full mt-2 text-center lg:flex lg:flex-row lg:flex-1 lg:mt-0 lg:text-left lg:justify-end">
             <% if user_signed_in? %>
-              <%= link_to 'New Project', new_project_path, class: "btn btn-white mb-2 lg:mb-0 block" %>
-              <%= link_to "Log out", destroy_user_session_path, method: :delete, class:"btn btn-default mb-2 lg:ml-2 lg:mb-0 block" %>
+              <%= link_to "Account", edit_user_registration_path, class: "btn btn-default mb-2 lg:mr-2 lg:mb-0 block" %>
+              <%= link_to "Log out", destroy_user_session_path, method: :delete, class:"btn btn-default mb-2 lg:mb-0 block" %>
             <% else %>
 
               <%= link_to "Login", new_user_session_path, class:"btn btn-default mb-2 lg:mr-2 lg:mb-0 block" %>
@@ -54,7 +56,7 @@
       </nav>
     </header>
 
-    <main class="lg:px-10 px-4">
+    <main class="px-4 lg:px-10">
       <%= content_for?(:content) ? yield(:content) : yield %>
     </main>
   </body>
