--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,5 +1,6 @@
-<% content_for :devise_form do %>
-  <h2 class="heading text-4xl font-bold pt-4 mb-8">Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container flex flex-wrap items-start justify-between mx-auto">
+  <div class="w-full lg:w-1/2">
+  <h2 class="pt-4 mb-8 text-4xl font-bold heading">Account</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
@@ -29,7 +30,7 @@
     <div class="mb-6">
       <%= f.label :password, class:"label" %>
       <%= f.password_field :password, autocomplete: "new-password", class:"input" %>
-      <p class="text-sm text-grey-dark pt-1 italic"> <% if @minimum_password_length %>
+      <p class="pt-1 text-sm italic text-grey-dark"> <% if @minimum_password_length %>
         <%= @minimum_password_length %> characters minimum <% end %> (leave blank if you don't want to change it) </p>
 
     </div>
@@ -42,7 +43,7 @@
     <div class="mb-6">
       <%= f.label :current_password, class: "label" %>
       <%= f.password_field :current_password, autocomplete: "current-password", class: "input" %>
-      <p class="text-sm text-grey-dark pt-2 italic">(we need your current password to confirm your changes)</p>
+      <p class="pt-2 text-sm italic text-grey-dark">(we need your current password to confirm your changes)</p>
     </div>
 
     <div class="mb-6">
@@ -50,18 +51,23 @@
     </div>
     <% end %>
 
-    <hr class="border mt-6 mb-3" />
+    <hr class="mt-6 mb-3 border" />
 
-    <h3 class="heading text-xl font-bold mb-4">Cancel my account</h3>
+    <h3 class="mb-4 text-xl font-bold heading">Cancel my account</h3>
 
-    <div class="flex justify-between items-center">
+    <div class="flex items-center justify-between">
       <div class="flex-1"><p class="py-4">Unhappy?</p></div>
 
       <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-default" %>
     </div>
-
-<% end %>
-
-<%= render 'devise/shared/form_wrap' %>
-
-
+  </div>
+<div class="w-full text-left lg:pl-16 lg:w-1/2">
+  <div class="p-6 mt-10 text-gray-900 bg-white rounded shadow-lg">
+    <% unless resource.can_receive_payments? %>
+      <h4 class="mb-6 text-xl font-semibold leading-none text-gray-900">You wont be able to sell items until you register with Stripe!</h4>
+      <%= stripe_button %>
+    <% else %>
+      <h4 class="mb-6 text-xl font-semibold leading-none text-gray-900">Successfully connected to Stripe 👍 ✅</h4>
+    <% end %>
+  </div>
+</div>
