Add nested form interactive logic and partials

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: project, local: true, multipart: true) do |form| %>
   <% if project.errors.any? %>
-    <div id="error_explanation" class="bg-white p-6 rounded text-red-500 mb-5">
-      <h2 class="text-red-500 font-bold"><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
+    <div id="error_explanation" class="p-6 mb-5 text-red-500 bg-white rounded">
+      <h2 class="font-bold text-red-500"><%= pluralize(project.errors.count, "error") %> prohibited this project from being saved:</h2>
 
       <ul>
         <% project.errors.full_messages.each do |message| %>
@@ -30,6 +30,27 @@
     <%= form.label :description, class: "label" %>
     <%= form.rich_text_area :description, class: "input" %>
   </div>
+
+  <div class="my-10">
+    <h3 class="text-2xl">Perks</h3>
+
+    <div data-controller="nested-form">
+      <template data-target='nested-form.template'>
+        <%= form.fields_for :perks, Perk.new, child_index: 'TEMPLATE_RECORD' do |perk| %>
+          <%= render 'perk_fields', form: perk %>
+        <% end %>
+      </template>
+
+      <%= form.fields_for :perks do |perk| %>
+        <%= render 'perk_fields', form: perk %>
+      <% end %>
+
+      <div data-target="nested-form.add_perk">
+        <%= link_to "Add Perk", "#", data: { action: "nested-form#add_association" }, class: "btn btn-white" %>
+      </div>
+    </div>
+  </div>
+
 
   <div class="mb-6">
     <%= form.submit class: "btn btn-default" %>
