--- a/app/views/projects/_active_project.html.erb
+++ b/app/views/projects/_active_project.html.erb
@@ -7,17 +7,6 @@
       project.user.username %></p>
       </div>
 
-      <% if user_signed_in? %>
-        <% if !author_of(project) %>
-          <%= link_to "Back this idea", "#", class: "btn btn-default btn-lg lg:w-auto w-full lg:text-left text-center" %>
-        <% else %>
-          <%= link_to "Back this idea", "#", class: "btn btn-default btn-lg lg:w-auto w-full lg:text-left text-center" %>
-        <% end %>
-      <% else %>
-        <%= link_to "Back this idea", new_user_session_path, class:"btn btn-default btn-lg lg:w-auto w-full lg:text-left text-center" %>
-      <% end %>
-    </div>
-
     <div class="w-full mb-4 lg:w-1/5 lg:mb-0">
       <p class="m-0 text-xl font-semibold leading-none"><%= number_to_currency(project.current_donation_amount) %></p>
       <p class="text-sm text-gray-500">pledged of <%= number_to_currency(project.donation_goal) %></p>
@@ -46,22 +35,37 @@
         </div>
       </div>
     <% end %>
+    <div class="my-6">
+      <%= render "comments/comments", commentable: project  %>
+      <%= render "comments/form", commentable: project %>
     </div>
-    <div class="w-full mt-6 lg:pl-10 lg:w-2/5 lg:mt-0">
-      <p class="text-sm font-semibold text-gray-500 uppercase">Description</p>
-      <%= project.description %>
     </div>
-  </div>
 
-  <div class="w-full lg:w-3/5">
-    <%= render "comments/comments", commentable: project  %>
-    <%= render "comments/form", commentable: project %>
+    <div class="w-full mt-6 lg:pl-10 lg:w-2/5 lg:mt-0">
+      <div class="mb-6">
+        <p class="text-sm font-semibold text-gray-500 uppercase">Description</p>
+        <%= project.description %>
+      </div>
+
+      <h3 class="text-2xl text-gray-900">Back this idea</h3>
+
+      <% project.perks.each do |perk| %>
+        <div class="p-4 mb-6 bg-gray-100 border rounded">
+          <h4 class="text-lg font-bold text-center text-gray-900"><%= perk.title %></h4>
+          <p class="pb-2 mb-2 text-sm italic text-center border-b"><%= perk.quantity %> left</p>
+          <div class="py-2 text-gray-700">
+            <%= simple_format perk.description %>
+          </div>
+          <%= link_to "Back this idea for #{number_to_currency(perk.amount)} /mo", "#", class: "btn btn-default btn-expanded" %>
+        </div>
+      <% end %>
+    </div>
   </div>
 
  <% if admin? || author_of(project) %>
     <div class="absolute top-0 right-0 mt-4 mr-4">
       <%= link_to 'Edit', edit_project_path(project), class: "btn btn-sm btn-outlined btn-default" %>
-      <%= link_to 'Delee', project_path(project), method: :delete, class: "btn btn-sm btn-outlined btn-default", data: { confirm: "Are you sure?" } %>
+      <%= link_to 'Delete', project_path(project), method: :delete, class: "btn btn-sm btn-outlined btn-default", data: { confirm: "Are you sure?" } %>
     </div>
   <% end %>
 </div>
