Dynamic user perk conditions

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -71,18 +71,20 @@
     <% end %>
   </div>
 
-  <%  customer = Stripe::Customer.retrieve(current_user.stripe_id) %>
-  <% if resource.subscribed? && customer.subscriptions.any? %>
+  <% if resource.subscribed? %>
+   <% customer = Stripe::Customer.retrieve(current_user.stripe_id) %>
+    <% if customer.subscriptions.any? %>
     <div class="p-6 mt-10 text-gray-900 bg-white rounded shadow-lg">
       <h4 class="font-bold text-gray-900">Active subscriptions</h4>
       <ul>
         <% customer.subscriptions.list.data.each do |sub| %>
         <li class="flex items-center justify-between py-4 border-b">
           <div><%= sub.plan.nickname %></div>
-          <%= link_to "Cancel Subscription", subscription_path(id: sub.id), method: :delete, data: { confirm: "Are you sure?" } %>
+          <%= link_to "Cancel Subscription", subscription_path(id: sub.id, plan_id: sub.plan.id), method: :delete, data: { confirm: "Are you sure?" } %>
         </li>
         <% end %>
       </ul>
     </div>
+    <% end %>
    <% end %>
 </div>
